k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-space-frontend
  namespace: apps
  labels:
    app: my-space-frontend
    app.kubernetes.io/name: my-space-frontend
    app.kubernetes.io/part-of: homelab-apps
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: my-space-frontend
